# ThoFeOne

./: .gitignore  CITING.rst  FUNDING.rst  LICENSE.rst  README.rst  setup.cfg
doc/source/: conf.py
examples/: simple.py  v_sweep.py
thofeone/: constants.py  discretized_poisson.py  discretized_quantum.py  extract.py  minimal_model.py  sc_problem.py  test_edens.py
thofeone/tests/: test_doping.py  test_edens.py
thofeone/thofeone.egg-info/: PKG-INFO  SOURCES.txt
