[metadata]
name = thofeone
version = 2022.04
author = Eleni Chatzikyriakou
author_email = chatzikeleni@gmail.com
description = Quantum-Poisson Thomas-Fermi 1D tools
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/elchatz/thofeone
project_urls =
    Bug Tracker = https://github.com/elchatz/thofeone/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: 2-clause BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = thofeone
packages = find:
python_requires = >=3.6

[options.packages.find]
where = thofeone